<resources>
    <string name="common_res_app_name">common_res</string>
    <string name="pref_title_logout">退出登录</string>
    <string name="ac_ptr_hours_ago"> 小时之前</string>
    <string name="ac_ptr_last_update">上次更新: </string>
    <string name="ac_ptr_minutes_ago"> 分钟之前</string>
    <string name="ac_ptr_pull_down">下拉刷新...</string>
    <string name="ac_ptr_pull_down_to_refresh">下拉刷新...</string>
    <string name="ac_ptr_refresh_complete">更新完成...</string>
    <string name="ac_ptr_refreshing">F5的能量女朋友出现了</string>
    <string name="ac_ptr_release_to_refresh">松开刷新...</string>
    <string name="ac_ptr_seconds_ago"> 秒之前</string>
    <string name="account_bind">帐号绑定</string>
    <string name="accpet_push">接收番剧更新推送</string>
    <string name="activity_ArticleInfo_remove">移除收藏成功</string>
    <string name="activity_ablum_detail_content_id">aa%s</string>
    <string name="activity_appeal_title_text">侵权申诉</string>
    <string name="activity_bangumi_detail">剧集</string>
    <string name="activity_bangumi_detail_add_favourite">已收入后宫</string>
    <string name="activity_bangumi_detail_add_favourite_failed">操作失败，再试一下咯</string>
    <string name="activity_bangumi_detail_copyright">因版权问题或内容存在争议，该视频已删除！</string>
    <string name="activity_bangumi_detail_del_favourite">你就这样抛弃人家了(ಥ_ಥ)</string>
    <string name="activity_bangumi_detail_del_favourite_failed">操作失败，再试一下咯</string>
    <string name="activity_bangumi_online">番组</string>
    <string name="activity_cache_bangumi">离线缓存</string>
    <string name="activity_cache_video_confirm_cancel">再想想</string>
    <string name="activity_cache_video_confirm_delete">删了就再也找不回来了哟</string>
    <string name="activity_cached_video">视频列表</string>
    <string name="activity_caching_manage">正在缓存</string>
    <string name="activity_channel_filter_all">全部</string>
    <string name="activity_channel_filter_comments">评论最多</string>
    <string name="activity_channel_filter_default">综合排序</string>
    <string name="activity_channel_filter_one_month">一个月内</string>
    <string name="activity_channel_filter_one_week">一周以内</string>
    <string name="activity_channel_filter_three_month">三个月内</string>
    <string name="activity_channel_filter_views">围观最多</string>
    <string name="activity_channel_order_by_last_feed_back">最新回复</string>
    <string name="activity_channel_time_default">最新发布</string>
    <string name="activity_chat_send">发送</string>
    <string name="activity_comment">评论</string>
    <string name="activity_comment_editor">发送</string>
    <string name="activity_comment_editor_send_failed">评论失败</string>
    <string name="activity_comment_editor_send_success">评论成功</string>
    <string name="activity_comment_editor_sending">正在发送中 …</string>
    <string name="activity_comment_editor_too_short">内容太少，最少要五个字哟 ~</string>
    <string name="activity_comment_end">没啦</string>
    <string name="activity_comment_title_text">写评论</string>
    <string name="activity_compilation_album_lastupdatetime">最后更新于%s</string>
    <string name="activity_fans_and_attention_bartitle">粉丝和关注</string>
    <string name="activity_fans_and_attention_tab_attention">关注</string>
    <string name="activity_fans_and_attention_tab_fans">粉丝</string>
    <string name="activity_feedback_content_commit">提交</string>
    <string name="activity_feedback_content_input">请详细描述问题， 填写描述至少大于15个字</string>
    <string name="activity_feedback_content_length">内容长度不能小于十五个字符</string>
    <string name="activity_feedback_content_not_null">内容不能为空</string>
    <string name="activity_feedback_send_success">反馈发送成功！</string>
    <string name="activity_feedback_submit">提交中…</string>
    <string name="activity_feedback_title">标题</string>
    <string name="activity_game_manage">游戏管理</string>
    <string name="activity_guide_go">进入首页</string>
    <string name="activity_main_article">文章</string>
    <string name="activity_main_channel">频道</string>
    <string name="activity_main_dynamic">动态</string>
    <string name="activity_main_exit">再次点击退出程序哟~</string>
    <string name="activity_main_mine">我</string>
    <string name="activity_main_more">我的</string>
    <string name="activity_main_recommend">首页</string>
    <string name="activity_main_video">视频</string>
    <string name="activity_message_tab_atme">提醒</string>
    <string name="activity_message_tab_message">私信</string>
    <string name="activity_message_titlebar">消息</string>
    <string name="activity_player_alert_banana_limit">正式会员才能投蕉哦~</string>
    <string name="activity_player_alert_banana_limit_negative">不想动脑</string>
    <string name="activity_player_alert_banana_limit_positive">答题转正</string>
    <string name="activity_player_alert_banana_limit_sub">AC娘敬你是条汉子，去答题试试？</string>
    <string name="activity_player_alert_danmaku_limit">弹幕填装受到限制</string>
    <string name="activity_player_alert_danmaku_limit_negative">放弃发送</string>
    <string name="activity_player_alert_danmaku_limit_positive">解除禁制</string>
    <string name="activity_player_alert_danmaku_limit_sub">未登录用户仅可发布%d条弹幕</string>
    <string name="activity_player_alert_network_no_wifi">没WIFI啦，允许使用流量播放当前内容？</string>
    <string name="activity_player_alert_network_no_wifi_always">以后均允许</string>
    <string name="activity_player_alert_network_no_wifi_not">不允许</string>
    <string name="activity_player_alert_network_no_wifi_once">仅本次允许</string>
    <string name="activity_player_banana_buy_btn_buy">塞猴子香蕉</string>
    <string name="activity_player_banana_buy_btn_login">已塞蕉，登陆</string>
    <string name="activity_player_banana_buy_tip1">想看猴子的私藏番剧</string>
    <string name="activity_player_banana_buy_tip2">30蕉即享所有私藏一整月!</string>
    <string name="activity_player_buffering">正在加载视频...</string>
    <string name="activity_player_cache_unavailable">文件回火星了，请删除重下咯</string>
    <string name="activity_player_continue">继续观看</string>
    <string name="activity_player_danamku_hint">准备填装弹幕…</string>
    <string name="activity_player_danmaku_too_frequency">您发送太频繁了，请稍后再试</string>
    <string name="activity_player_danmaku_too_short">弹幕内容过短！</string>
    <string name="activity_player_download_not_available">当前内容暂不支持离线缓存</string>
    <string name="activity_player_error_retry">魔法吟唱中断，请重试</string>
    <string name="activity_player_formal_member_only_tip">"观看这个视频需要通过
答题试炼呦"</string>
    <string name="activity_player_last_progress">上次观看至：%s</string>
    <string name="activity_player_login">@string/login</string>
    <string name="activity_player_member_only_tip">观看这个视频需要登录呦</string>
    <string name="activity_player_play_not_available">因版权问题，该视频暂不提供播放！</string>
    <string name="activity_player_quality_hd">高清</string>
    <string name="activity_player_quality_pro">原画</string>
    <string name="activity_player_quality_sd">标清</string>
    <string name="activity_player_quality_tip">*切换清晰度将从头播放</string>
    <string name="activity_player_quality_ud">超清</string>
    <string name="activity_player_switch_quality">切换至%s</string>
    <string name="activity_player_switch_to_wifi">欢迎回到没有WiFi会死星球</string>
    <string name="activity_player_unit_second">秒</string>
    <string name="activity_player_video_count_is_end">共%s集</string>
    <string name="activity_player_video_count_not_end">已更新至%s</string>
    <string name="activity_player_video_parts_count">共%sP</string>
    <string name="activity_playerweb">视频</string>
    <string name="activity_playerweb_fullscreen">全屏播放</string>
    <string name="activity_playerweb_fullscreen_toast">点击右侧按钮全屏播放！</string>
    <string name="activity_rank_label">排行榜</string>
    <string name="activity_report_title_text">举报不当内容</string>
    <string name="activity_search_no_result_recommend">精彩推荐</string>
    <string name="activity_search_no_result_retry">"加载出问题了
戳我刷新咯"</string>
    <string name="activity_search_no_result_tip">"没找到你要的内容，
看看下面这些吧！"</string>
    <string name="activity_search_word_recommend">热门搜索</string>
    <string name="activity_setting_allowed_cache_nowifi">允许在移动网络下缓存</string>
    <string name="activity_setting_allowed_play_nowifi">允许在移动网络下播放</string>
    <string name="activity_setting_article_fontsize_large">有点大</string>
    <string name="activity_setting_article_fontsize_larger">特别大</string>
    <string name="activity_setting_article_fontsize_normal">标准</string>
    <string name="activity_setting_article_fontsize_small">非常小</string>
    <string name="activity_setting_cache_device_storage">手机储存</string>
    <string name="activity_setting_cache_dir_primary_select">主存储（%1$s / %2$s）</string>
    <string name="activity_setting_cache_dir_secondary_select">副存储（%1$s / %2$s）</string>
    <string name="activity_setting_cache_sdcard_storage">内存卡储存</string>
    <string name="activity_setting_confirm_decoder">系统硬解在部分机型上可能导致播放异常，确认开启？</string>
    <string name="activity_setting_danmaku">弹幕设置</string>
    <string name="activity_setting_danmaku_size">弹幕大小</string>
    <string name="activity_setting_danmaku_size_desc">当前设置：%s</string>
    <string name="activity_setting_danmaku_size_select_large">较大字体</string>
    <string name="activity_setting_danmaku_size_select_larger">特大字体</string>
    <string name="activity_setting_danmaku_size_select_normal">正常字体</string>
    <string name="activity_setting_danmaku_size_select_small">较小字体</string>
    <string name="activity_setting_danmaku_size_select_smaller">特小字体</string>
    <string name="activity_setting_load_image_with_3g">移动网络下加载图片</string>
    <string name="activity_setting_notify_push">接收新消息通知</string>
    <string name="activity_setting_other">离线设置</string>
    <string name="activity_setting_other_help">其他设置</string>
    <string name="activity_setting_other_resetall">恢复默认设置</string>
    <string name="activity_setting_other_resetall_confirm">机体已准备就绪，是否恢复默认设置？</string>
    <string name="activity_setting_reset">恢复</string>
    <string name="activity_setting_reset_succese">恢复成功，今后要好好相处哦！</string>
    <string name="activity_setting_update_checking">魔法阵已激活，检测中</string>
    <string name="activity_setting_video">播放设置</string>
    <string name="activity_setting_video_decoder">解码设置</string>
    <string name="activity_setting_video_decoder_desc">当前设置：%s</string>
    <string name="activity_setting_video_decoder_software">软件解码</string>
    <string name="activity_setting_video_decoder_system">系统硬解</string>
    <string name="activity_setting_video_quality">默认离线清晰度</string>
    <string name="activity_setting_video_quality_desc">当前设置：%s</string>
    <string name="activity_setting_video_quality_select_hd">高清优先</string>
    <string name="activity_setting_video_quality_select_op">原画优先</string>
    <string name="activity_setting_video_quality_select_sd">标清优先</string>
    <string name="activity_setting_video_quality_select_ud">超清优先</string>
    <string name="activity_setting_whatever">算了</string>
    <string name="activity_setting_yes_i_sure">开启</string>
    <string name="common_next">下一步</string>
    <string name="find_password_step2_new_password">请输入新密码</string>
    <string name="find_password_step2_sub_title">输入并重复新密纹，密纹修改就完成啦！</string>
    <string name="find_password_step2_title">设置新密纹</string>
    <string name="find_password_sub_title">亲爱的用户,您可以通过手机短信验证码修改密纹</string>
    <string name="find_password_title">手机验证</string>
    <string name="find_password_view_again_password_hint_text">再报一次密码</string>
    <string name="find_password_view_complete_text">完成</string>
    <string name="find_password_view_set_password_top_text">您可以使用手机号登录%s</string>
    <string name="find_password_view_validation_send_complete_text">验证码已发送到您的手机，如60s后没有收到验证码请重新获取</string>
    <string name="get_verification_code_comm_text">发送验证码</string>
    <string name="login_view_can_not_login_text">登录帮助</string>
    <string name="login_view_forget_password_text">忘记密码</string>
    <string name="login_view_login_text">@string/login</string>
    <string name="login_view_password_hint_text">密纹</string>
    <string name="login_view_username_hint_text">手机号 / 邮箱</string>
    <string name="login_wechat_text">微信登录</string>
    <string name="regist_view_phone_hint_text">手机号</string>
    <string name="regist_view_verification_code_hint_text">验证码</string>
</resources>