<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:aapt="http://schemas.android.com/aapt"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/toolbar_title_center_view"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/find_password_view_validation_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="@string/find_password_title"
                        android:textColor="#ff555555"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/find_password_sub_title"
                        android:textColor="#ffbdbdbd"
                        android:textSize="12sp"/>

                    <LinearLayout
                        style="@style/input_wrap_layout"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:src="@drawable/icon_user_phone"/>

                        <EditText
                            android:id="@+id/find_password_view_phone_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:hint="@string/regist_view_phone_hint_text"
                            android:inputType="phone"
                            android:maxLength="11"
                            android:paddingRight="5dp"
                            android:singleLine="true"
                            android:textColor="@color/login_input_def_color"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/input_wrap_layout"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:src="@drawable/icon_user_yanzhengma"/>

                        <EditText
                            android:id="@+id/find_password_view_verification_code_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/transparent"
                            android:hint="@string/regist_view_verification_code_hint_text"
                            android:inputType="number"
                            android:maxLength="6"
                            android:paddingRight="5dp"
                            android:singleLine="true"
                            android:textColor="@color/login_input_def_color"
                            android:textSize="16sp"/>

                        <Button
                            android:id="@+id/find_password_view_verification_code_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:gravity="right|center_vertical|center_horizontal|center"
                            android:text="@string/get_verification_code_comm_text"
                            android:textAllCaps="false"
                            android:textColor="@color/text_deep_gray_color"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/find_password_view_validation_send_complete_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="88dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:text="@string/find_password_view_validation_send_complete_text"
                        android:textColor="@color/gray"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/find_password_view_next_btn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/common_next"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/find_password_view_set_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="@string/find_password_step2_title"
                        android:textColor="#ff555555"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/find_password_step2_sub_title"
                        android:textColor="#ffbdbdbd"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/find_password_view_set_password_top_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/find_password_view_set_password_top_text"
                        android:textColor="@color/find_password_top_text_color"
                        android:textSize="18sp"
                        android:visibility="gone"/>

                    <LinearLayout
                        style="@style/input_wrap_layout"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:src="@drawable/icon_user_password"/>

                        <EditText
                            android:id="@+id/find_password_view_password_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:hint="@string/find_password_step2_new_password"
                            android:inputType="textPassword"
                            android:paddingRight="5dp"
                            android:singleLine="true"
                            android:textColor="@color/login_input_def_color"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/input_wrap_layout"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:src="@drawable/icon_user_password"/>

                        <EditText
                            android:id="@+id/find_password_view_again_password_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:hint="@string/find_password_view_again_password_hint_text"
                            android:inputType="textPassword"
                            android:paddingRight="5dp"
                            android:singleLine="true"
                            android:textColor="@color/login_input_def_color"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/regist_view_complete_btn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/find_password_view_complete_text"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
